@Ruben - Fixed version to build andorid on

--- a/aurii-frontend/aurii-app/src/app/home/home.page.html
+++ b/aurii-frontend/aurii-app/src/app/home/home.page.html
@@ -1,20 +1,13 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>Health Connect Access</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <ion-button (click)="checkHealthConnectAccess()">Check Access</ion-button>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div *ngIf="healthConnectStatus" style="margin-top: 15px;">
+    {{ healthConnectStatus }}
   </div>
 </ion-content>
