@Ruben - Added in the landing default page and started scaffolding out the frontend

--- a/aurii-frontend/aurii-app/src/app/home/home.page.html
+++ b/aurii-frontend/aurii-app/src/app/home/home.page.html
@@ -1,13 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Health Connect Access</ion-title>
+    <ion-title>YOU - Coach Aurii</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-button (click)="checkHealthConnectAccess()">Check Access</ion-button>
-
-  <div *ngIf="healthConnectStatus" style="margin-top: 15px;">
-    {{ healthConnectStatus }}
-  </div>
+{{"Hello World"}}
 </ion-content>
