--- a/aurii-frontend/aurii-app/src/app/shared/tab-nav-bar/tab-nav-bar.component.html
+++ b/aurii-frontend/aurii-app/src/app/shared/tab-nav-bar/tab-nav-bar.component.html
@@ -10,9 +10,9 @@
       <ion-label>Calendar</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="log" href="/log">
+    <ion-tab-button tab="coach" href="/coach">
       <ion-icon name="add-circle-outline"></ion-icon>
-      <ion-label>Log</ion-label>
+      <ion-label>Coach</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="profile" href="/profile">
