--- a/aurii-frontend/aurii-app/src/app/features/coach/coach.page.html
+++ b/aurii-frontend/aurii-app/src/app/features/coach/coach.page.html
@@ -1,3 +1,21 @@
 <p>
   coach works!
 </p>
+
+@switch (condition) {
+  @case ("home") {
+    A
+    <coach-home></coach-home>
+  }
+  @case ("wizard") {
+    Case B.
+    <app-wizard></app-wizard>
+  }
+  @case ("summary") {
+    Case C.
+    <app-plan-summary></app-plan-summary>
+  }
+  @default {
+    <coach-home></coach-home>
+  }
+}
