--- a/aurii-frontend/aurii-app/src/app/features/coach/coach.page.html
+++ b/aurii-frontend/aurii-app/src/app/features/coach/coach.page.html
@@ -2,20 +2,21 @@
   coach works!
 </p>
 
-@switch (condition) {
-  @case ("home") {
-    A
-    <coach-home></coach-home>
-  }
-  @case ("wizard") {
-    Case B.
-    <app-wizard></app-wizard>
-  }
-  @case ("summary") {
-    Case C.
-    <app-plan-summary></app-plan-summary>
-  }
-  @default {
-    <coach-home></coach-home>
-  }
-}
+<router-outlet></router-outlet>
+<!--@switch (condition) {-->
+<!--  @case ("home") {-->
+<!--    A-->
+<!--    <coach-home></coach-home>-->
+<!--  }-->
+<!--  @case ("wizard") {-->
+<!--    Case B.-->
+<!--    <app-wizard></app-wizard>-->
+<!--  }-->
+<!--  @case ("summary") {-->
+<!--    Case C.-->
+<!--    <app-plan-summary></app-plan-summary>-->
+<!--  }-->
+<!--  @default {-->
+<!--    <coach-home></coach-home>-->
+<!--  }-->
+<!--}-->
