Implemented support for dynamic forms in WizardComponent.
- Added `DynamicFormComponent` and `QuestionControlService` for handling dynamic form generation.
- Enhanced `WizardComponent` to include form handling with observable-driven dynamic questions.
- Introduced `QuestionBase` model and related question mappers for type-safe form customization.
- Updated HTML templates for dynamic form rendering and removed outdated JSON display logic.
- Added new UI components for form questions and updated questionnaire models to support dynamic fields.

--- a/aurii-frontend/aurii-app/src/app/features/coach/wizard/wizard.component.html
+++ b/aurii-frontend/aurii-app/src/app/features/coach/wizard/wizard.component.html
@@ -1,4 +1,5 @@
 <ion-content>
+  <p>{{showWizard}}</p>
   <!--Plan Selection-->
   @if (!showWizard) {
     <ion-label>What kind of plan are you interested in building?</ion-label>
@@ -7,12 +8,11 @@
     } @empty {
       <ion-label>Uh-oh! looks like we haven't set up any plans</ion-label>
     }
-
   } @else {
     <p>Yer a wizard, Harry!</p>
-    <p>{{ form | json }}</p>
+    <app-dynamic-form [questions]="questions$ | async"></app-dynamic-form>
   }
-  <!--Questionnaire Wizard-->
+
 </ion-content>
 
 
