--- a/aurii-frontend/aurii-app/src/app/features/dashboard/dashboard.page.scss
+++ b/aurii-frontend/aurii-app/src/app/features/dashboard/dashboard.page.scss
@@ -2,3 +2,10 @@
 :host {
   display: block;
 }
+
+.page-container {
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
