--- a/aurii-frontend/aurii-app/src/global.scss
+++ b/aurii-frontend/aurii-app/src/global.scss
@@ -35,3 +35,63 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import '@ionic/angular/css/palettes/dark.system.css';
+
+/* Apply font, background, and text globally */
+ion-app, ion-content, html, body {
+  font-family: var(--ion-font-family);
+  background-color: var(--ion-background-color);
+  color: var(--ion-text-color);
+  font-size: 16px;
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+/* Default selection style */
+::selection {
+  background-color: var(--ion-color-tertiary);
+  color: var(--ion-text-color);
+}
+
+/* Links */
+a {
+  color: var(--ion-color-tertiary);
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+/* Buttons */
+ion-button {
+  --background: var(--ion-color-tertiary);
+  --color: var(--ion-color-primary);
+  border-radius: var(--ion-border-radius);
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+/* Cards */
+ion-card {
+  background-color: var(--ion-card-background);
+  border-radius: var(--ion-border-radius);
+  box-shadow: var(--ion-box-shadow);
+  padding: 1rem;
+}
+
+/* Labels and text */
+ion-label, ion-text, p, h1, h2, h3, h4, h5, h6 {
+  color: var(--ion-text-color);
+}
+
+/* List Items */
+ion-item {
+  --background: transparent;
+  --color: var(--ion-text-color);
+}
+
+/* Prevent iOS tap highlight */
+* {
+  -webkit-tap-highlight-color: transparent;
+}
