@Ruben - Added activity screen, created createActivity, added some global scss.

--- a/aurii-frontend/aurii-app/src/app/features/calendar/calendar.page.html
+++ b/aurii-frontend/aurii-app/src/app/features/calendar/calendar.page.html
@@ -1,3 +1,15 @@
-<p>
-  calendar works!
-</p>
+<ion-card class="glass-card">
+  <ion-card-header>
+    <ion-card-title>Select a Date</ion-card-title>
+  </ion-card-header>
+
+  <ion-card-content>
+    <ion-datetime
+      presentation="date"
+      color="primary"
+      show-default-buttons="true"
+      prefer-wheel="false"
+      class="custom-datetime"
+    ></ion-datetime>
+  </ion-card-content>
+</ion-card>
