--- a/aurii-frontend/aurii-app/src/app/features/dashboard/dashboard.page.html
+++ b/aurii-frontend/aurii-app/src/app/features/dashboard/dashboard.page.html
@@ -13,42 +13,48 @@
 </ion-header>
 
 <ion-content>
-  <div class="page-container">
-    <h1>Welcome</h1>
-    <ion-card>
-      <ion-card-header>
-        <ion-card-title>Dashboard</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        Content here
-      </ion-card-content>
-    </ion-card>
-  </div>
+  <ion-card class="glass-card">
+    <ion-card-header>
+<!--      <ion-card-title>Card Title</ion-card-title>-->
+<!--      <ion-card-subtitle>Card Subtitle</ion-card-subtitle>-->
+    </ion-card-header>
+
+    <ion-card-content>
+      This will be our Snapshot calendar
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card class="glass-card">
+    <ion-card-header>
+<!--      <ion-card-title>Card Title</ion-card-title>-->
+<!--      <ion-card-subtitle>Card Subtitle</ion-card-subtitle>-->
+    </ion-card-header>
+
+    <ion-card-content>
+     Our planned activities for today
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card class="glass-card">
+    <ion-card-header>
+<!--      <ion-card-title>Card Title</ion-card-title>-->
+<!--      <ion-card-subtitle>Card Subtitle</ion-card-subtitle>-->
+    </ion-card-header>
+
+    <ion-card-content>
+      Create a plan
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card class="glass-card">
+    <ion-card-header>
+<!--      <ion-card-title>Card Title</ion-card-title>-->
+<!--      <ion-card-subtitle>Card Subtitle</ion-card-subtitle>-->
+    </ion-card-header>
+
+    <ion-card-content>
+      Recent activities
+    </ion-card-content>
+  </ion-card>
 </ion-content>
 
-<ion-content class="ion-padding">
-
-</ion-content>
-<ion-footer>
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="dashboard" href="/dashboard">
-      <ion-icon name="home-outline"></ion-icon>
-      <ion-label>Dashboard</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="calendar" href="/calendar">
-      <ion-icon name="calendar-outline"></ion-icon>
-      <ion-label>Calendar</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="log" href="/log">
-      <ion-icon name="add-circle-outline"></ion-icon>
-      <ion-label>Log</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="profile" href="/profile">
-      <ion-icon name="person-outline"></ion-icon>
-      <ion-label>Profile</ion-label>
-    </ion-tab-button>
-  </ion-tab-bar>
-</ion-footer>
