--- a/aurii-frontend/aurii-app/src/app/shared/tab-nav-bar/tab-nav-bar.component.html
+++ b/aurii-frontend/aurii-app/src/app/shared/tab-nav-bar/tab-nav-bar.component.html
@@ -15,9 +15,14 @@
       <ion-label>Coach</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="profile" href="/profile">
-      <ion-icon name="person-outline"></ion-icon>
-      <ion-label>Profile</ion-label>
+    <ion-tab-button tab="activities" href="/activities">
+      <ion-icon></ion-icon>
+      <ion-label>Activities</ion-label>
     </ion-tab-button>
+
+<!--    <ion-tab-button tab="profile" href="/profile">-->
+<!--      <ion-icon name="person-outline"></ion-icon>-->
+<!--      <ion-label>Profile</ion-label>-->
+<!--    </ion-tab-button>-->
   </ion-tab-bar>
 </ion-tabs>
